production-infrastructure/coder/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder
  labels:
    app: coder
